Bug 691474 - PDF 1.7 FTS: /unknownerror in --showpage--
Summary: PDF 1.7 FTS: /unknownerror in --showpage--
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: General (show other bugs)
Version: master
Hardware: PC Linux
: P1 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-18 16:08 UTC by Alex Cherepanov
Modified: 2011-09-18 21:46 UTC (History)
0 users

See Also:
Customer: 532
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Cherepanov 2010-07-18 16:08:13 UTC
File fts_26_2603_a4.pdf fails with
./base/gdevp14.c:2682: pdf14_update_device_color_procs(): ICC data not found in clist
Error: /unknownerror in --showpage--
Operand stack:
   1   true
Comment 1 Ray Johnston 2010-07-18 16:58:27 UTC
This one is almost certainly something Michael should investigate. The
'unregistered in showpage' is the result anytime the clist rendering of a
band gets an error. The error message indicates that an ICC profile is not
getting stored into the clist as expected.
Comment 2 Ray Johnston 2010-07-18 18:30:18 UTC
Update to reflect customer status and ID.
Comment 3 Michael Vrhel 2010-07-19 14:49:22 UTC
I have tracked down the problem with this one.  One of the soft masks in the file has a transfer function, the values of which are placed in the clist prior to the icc hash code.  Apparently the number of transfer values is not being placed or read correctly in the c-list and then the icc hashcode is not getting extracted from the correct location.  Should have this fixed shortly.
Comment 4 Michael Vrhel 2010-07-19 21:22:50 UTC
Fixed with rev 11523
Comment 5 Marcos H. Woehrmann 2011-09-18 21:46:23 UTC
Changing customer bugs that have been resolved more than a year ago to closed.