Fix for Bug691474.  Source of error was due to icc hash code being read from clist after the transfer function.  It should have been read prior to the transfer function.  This was the first file we have seen that had a soft mask with a transfer function.  Also fix for rendering of this file.  The softmasks only uses the alpha channel as opposed to the luminosity of the object.  Progression with CityMap-evnice.pdf in test suite.  That file must have a alpha style softmask.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11523 a1074d23-0009-0410-80fe-cf8c14f379e6